...
  static const Key manualOptionButtonKey = Key(
    'expense_create_manual_option_button',
  );
  static const Key scanningOptionButtonKey = Key(
    'expense_create_scanning_option_button',
  );
  static const Key nameInputKey = Key('expense_create_name_input');
  static const Key amountInputKey = Key('expense_create_amount_input');
  static const Key eventInputKey = Key('expense_create_event_input');
  static const Key payerInputKey = Key('expense_create_payer_input');
  static const Key dateInputKey = Key('expense_create_date_input');
  static const Key reminderInputKey = Key('expense_create_reminder_input');
  static const Key splitEqualOptionKey = Key(
    'expense_create_split_equal_option',
  );
  static const Key splitCustomOptionKey = Key(
    'expense_create_split_custom_option',
  );
...
